src/objects/SUObj1__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SUObj1</label>
    <nameField>
        <label>SUObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SUObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>